# CVPDL_2025_HW3

./: .gitignore  README.md  pyproject.toml
src/: inference.py  train.py  visual.py
