[project]
name = "cvpdl-2025-hw3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
  "torch==2.8.0+cu129",
  "torchvision==0.23.0",
  "pandas>=2.3.3",
  "pytorch-fid==0.3.0",
  "numpy>=2.0.0",
  "tqdm>=4.66.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129" },
]
torchvision = [
  { index = "pytorch-cu129" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
